syntax = "proto3";

package user.user;

option go_package = "Home/Full_Stack_Service_Networking/project/project/user";

service User {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc ListUsers(ListUserRequest) returns (ListUserResponse);
}

message UserMessage {
    string user_id = 1;
    string name = 2;
    string phone_number = 3;
    int32 age = 4;
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    UserMessage user_message = 1;
}

message ListUserRequest {}

message ListUserResponse {
    repeated UserMessage user_messages = 1;
}